--- a/src/frontend-basic/css/15.如何开启GPU加速，原理是什么.md
+++ b/src/frontend-basic/css/15.如何开启GPU加速，原理是什么.md
@@ -3,3 +3,21 @@ index: 15
 ---
 
 # 15.如何开启GPU加速，原理是什么
+我们可以在浏览器中用css开启硬件加速，使GPU (Graphics Processing Unit) 发挥功能，从而提升性能。
+
+可以使用如下css开启:
++ transform
++ opacity
++ filter
+
+
+浏览器接收到页面文档后，会将文档中的标记语言解析为DOM树。DOM树和CSS结合后形成浏览器构建页面的渲染树。渲染树中包含了大量的渲染元素，每一个渲染元素会被分到一个图层中，每个图层又会被加载到GPU形成渲染纹理，而图层在GPU中`transform`是不会触发 repaint 的，最终这些使用`transform`的图层都会由独立的合成器进程进行处理。
+
+CSS`transform`会创建了一个新的复合图层，可以被GPU直接用来执行`transform`操作。
+
+浏览器什么时候会创建一个独立的复合图层呢？事实上一般是在以下几种情况下：
+
+- 3D 或者 CSS transform
+- <video>和<canvas>标签
+- CSS filters
+- 元素覆盖时，比如使用了z-index属性
