--- a/src/frontend-basic/css/15.如何开启GPU加速原理是什么.md
+++ b/src/frontend-basic/css/15.如何开启GPU加速原理是什么.md
@@ -18,6 +18,6 @@ CSS`transform`会创建了一个新的复合图层，可以被GPU直接用来执
 浏览器什么时候会创建一个独立的复合图层呢？事实上一般是在以下几种情况下：
 
 - 3D 或者 CSS transform
-- <video>和<canvas>标签
+- `video`和`canvas`标签
 - CSS filters
 - 元素覆盖时，比如使用了z-index属性
