--- a/src/frontend-advanced/React/React面试题/12.React的Hooks为什么不能在条件判断里写.md
+++ b/src/frontend-advanced/React/React面试题/12.React的Hooks为什么不能在条件判断里写.md
@@ -1,4 +1,7 @@
 ---
 order: 12
 ---
-# 12.React的Hooks为什么不能在条件判断里写
+
+# 12.React 的 Hooks 为什么不能在条件判断里写
+
+每个组件都有一个 Hooks 链表，其中存储了该组件的所有 Hooks 状态。当组件被渲染时，React 会按照 Hooks 链表中的顺序依次执行所有的 Hook。这就是为什么在使用 Hooks 时必须保证它们的调用顺序始终相同，否则可能会出现意外的结果。
