--- a/src/frontend-basic/js/手写面试题/实现继承.md
+++ b/src/frontend-basic/js/手写面试题/实现继承.md
@@ -5,7 +5,7 @@
 
 ```js
 function Parent() {
-  this.name = "kevin";
+  this.name = 'kevin';
 }
 
 Parent.prototype.getName = function () {
@@ -30,7 +30,7 @@ console.log(child1.getName());
 
 ```js
 function Parent() {
-  this.names = ["kevin", "daisy"];
+  this.names = ['kevin', 'daisy'];
 }
 
 function Child() {
@@ -39,7 +39,7 @@ function Child() {
 
 var child1 = new Child();
 
-child1.names.push("yayu");
+child1.names.push('yayu');
 
 console.log(child1.names); // ["kevin", "daisy", "yayu"]
 
@@ -55,14 +55,14 @@ console.log(child2.names); // ["kevin", "daisy"]
 
 缺点
 
-- 方法都在构造函数中定义，每次创建实例都会创建一遍方法
+- 无法访问 Parent 原型上的属性和方法
 
 @tab 组合继承
 
 ```js {11,15,16}
 function Parent(name) {
   this.name = name;
-  this.colors = ["red", "blue", "green"];
+  this.colors = ['red', 'blue', 'green'];
 }
 
 Parent.prototype.getName = function () {
@@ -77,15 +77,15 @@ function Child(name, age) {
 Child.prototype = new Parent();
 Child.prototype.constructor = Child;
 
-var child1 = new Child("kevin", "18");
+var child1 = new Child('kevin', '18');
 
-child1.colors.push("black");
+child1.colors.push('black');
 
 console.log(child1.name); // kevin
 console.log(child1.age); // 18
 console.log(child1.colors); // ["red", "blue", "green", "black"]
 
-var child2 = new Child("daisy", "20");
+var child2 = new Child('daisy', '20');
 
 console.log(child2.name); // daisy
 console.log(child2.age); // 20
@@ -112,3 +112,27 @@ prototype(Child, Parent);
 ```
 
 ::::
+
+## 总结一下
+
+- Child 的构造函数里，Parent.call(this), 这一步是为了让 Child 的实例可以访问到 Parent 实例属性和方法
+- Child.prototype = new Parent(), 这一步是为了让 Child 的实例/原型可以访问到 Parent 原型上的属性和方法
+
+以上两点会调用两次 Parent 的构造函数，所以需要中间层：
+
+```js
+function Parent() {
+  this.name = 'kevin';
+}
+
+function Child() {
+  Parent.call(this);
+}
+
+function F() {}
+F.prototype = Parent.prototype;
+
+// Child访问Parent原型上的属性和方法时，会沿着原型链向上查找
+Child.prototype = new F();
+Child.prototype.constructor = Child;
+```
