--- a/src/rust-learn/1.数据类型/字符串.md
+++ b/src/rust-learn/1.数据类型/字符串.md
@@ -119,3 +119,16 @@ let result = string_append + &string_rust;
 let mut result = result + "!"; // `result + "!"` 中的 `result` 是不可变的
 result += "!!!";
 ```
+
+## 操作 UTF-8 字符串
+```rust
+for c in "中国人".chars() {
+  println!("{}", c);
+}
+```
+
+```rust
+for b in "中国人".bytes() {
+    println!("{}", b);
+}
+```
