--- a/src/frontend-basic/css/1.0.5px 解决方案.md
+++ b/src/frontend-basic/css/1.0.5px 解决方案.md
@@ -5,16 +5,18 @@ order: 1
 # 1. 0.5px 解决方案
 
 
-::: normal-demo 0.5px 解决方案
+:::demo
 
-```html
-<div>
-  <div class="setOnePx">一条边0.5px</div>
-  <div class="setBorderAll">四条边0.5px</div>
-</div>
-```
-
-```css
+```vue
+<template>
+  <div>
+    <div class="setOnePx">一条边0.5px</div>
+    <div class="setBorderAll">四条边0.5px</div>
+  </div>
+</template>
+<script setup>
+</script>
+<style>
 .setOnePx {
   position: relative;
 }
@@ -50,6 +52,6 @@ order: 1
   border: 1px solid #e5e5e5;
   border-radius: 20px;
 }
+</style>
 ```
-
 :::
