--- a/src/frontend-basic/css/13.双飞翼布局.md
+++ b/src/frontend-basic/css/13.双飞翼布局.md
@@ -3,59 +3,47 @@ order: 13
 ---
 
 # 13. 双飞翼布局
-::: normal-demo
 
-```html
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      html,
-      body {
-        height: 100%;
-      }
 
-      div {
-        height: 100%;
-      }
+:::demo
 
-      .main {
-        float: left;
-        width: 100%;
-        background: #f00;
-      }
+```vue
+<template>
+  <div class="main">
+    <div class="content">hello world</div>
+  </div>
+  <div class="left">你好</div>
+  <div class="right">12331223</div>
+</template>
+<script setup>
+</script>
+<style scoped>
 
-      .main .content {
-        margin-left: 200px;
-        margin-right: 300px;
-      }
+.main {
+  float: left;
+  width: 100%;
+  background: #f00;
+}
 
-      .left {
-        width: 200px;
-        background: #0f0;
-        float: left;
-        margin-left: -100%;
-      }
+.main .content {
+  margin-left: 200px;
+  margin-right: 300px;
+}
 
-      .right {
-        width: 300px;
-        background: #00f;
-        float: left;
-        margin-left: -300px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="main">
-      <div class="content">hello world</div>
-    </div>
-    <div class="left">你好</div>
-    <div class="right">12331223</div>
-  </body>
-</html>
+.left {
+  width: 200px;
+  background: #0f0;
+  float: left;
+  margin-left: -100%;
+}
+
+.right {
+  width: 300px;
+  background: #00f;
+  float: left;
+  margin-left: -300px;
+}
+</style>
 
 ```
 :::
