--- a/src/frontend-basic/css/14.img标签使用svg后如何改变颜色.md
+++ b/src/frontend-basic/css/14.img标签使用svg后如何改变颜色.md
@@ -1,7 +1,10 @@
 # 14. img标签使用svg后如何改变颜色
 
-::: normal-demo
-```html
-<img style="filter: drop-shadow(1000px 0 0 red); transform: translate(-1000px);" src="/babel.svg" />
+:::demo
+
+```vue
+<template>
+  <img style="filter: drop-shadow(1000px 0 0 red); transform: translate(-1000px);" src="/babel.svg" />
+</template>
 ```
 :::
