--- a/src/frontend-basic/css/4.CSS画三角形.md
+++ b/src/frontend-basic/css/4.CSS画三角形.md
@@ -3,19 +3,21 @@ order: 4
 ---
 # 4. CSS 画三角形
 
-::: normal-demo CSS 画三角形
+:::demo
 
-```html
-<div class="triangle"></div>
-```
-
-```css
+```vue
+<template>
+  <div class="triangle"></div>
+</template>
+<script setup>
+</script>
+<style>
 .triangle {
   width: 0;
   height: 0;
   border: 50px solid transparent;
   border-top-color: #d9534f;
 }
+</style>
 ```
-
 :::
