--- a/src/frontend-basic/css/6.CSS实现一个扇形.md
+++ b/src/frontend-basic/css/6.CSS实现一个扇形.md
@@ -3,15 +3,17 @@ order: 6
 ---
 # 6. CSS 实现一个扇形
 
-::: normal-demo CSS 实现一个扇形
+:::demo
 
-```html
-<div>
-  <div class="sector"></div>
-</div>
-```
-
-```css
+```vue
+<template>
+  <div>
+    <div class="sector"></div>
+  </div>
+</template>
+<script setup>
+</script>
+<style>
 .sector {
   width: 0;
   height: 0;
@@ -19,6 +21,7 @@ order: 6
   border-top-color: red;
   border-radius: 50%;
 }
+</style>
 ```
 
 :::
