--- a/src/informal/开发技巧/多行文本展开收起.md
+++ b/src/informal/开发技巧/多行文本展开收起.md
@@ -1,7 +1,7 @@
 # 多行文本展开收起
+:::demo
 
-::: preview
-```vue /src/App.vue
+```vue
 <template>
   <div>
     <div class="wrapper">
@@ -79,6 +79,3 @@
 }
 </style>
 ```
-:::
-
-
