--- a/src/frontend-basic/css/11.CSS画一个大小为父元素宽度一半的正方形.md
+++ b/src/frontend-basic/css/11.CSS画一个大小为父元素宽度一半的正方形.md
@@ -4,36 +4,28 @@ order: 11
 
 # 11. CSS画一个大小为父元素宽度一半的正方形
 
-::: normal-demo
+:::demo
 
-```html
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      .outer {
-        width: 200px;
-        height: 200px;
-        background: red;
-      }
+```vue
+<style scoped>
+.outer {
+  width: 200px;
+  height: 200px;
+  background: red;
+}
 
-      .inner {
-        width: 50%;
-        height: 0;
-        padding-bottom: 50%;
-        background: blue;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="outer">
-      <div class="inner"></div>
-    </div>
-  </body>
-</html>
-
+.inner {
+  width: 50%;
+  height: 0;
+  padding-bottom: 50%;
+  background: blue;
+}
+</style>
+<template>
+  <div class="outer">
+    <div class="inner"></div>
+  </div>
+</template>
+<script setup></script>
 ```
 :::
