--- a/src/frontend-basic/css/2.empxremvhvw区别.md
+++ b/src/frontend-basic/css/2.empxremvhvw区别.md
@@ -17,7 +17,7 @@ order: 2
 
 | 单位   | 规则                                                                              |
 | ------ | --------------------------------------------------------------------------------- |
-| px     | 绝对长度单位，表示像素，实际是我们显示器的像素大小一样                            |
+| px     | 绝对长度单位，表示像素，实际就是显示器的一个物理像素。如果设备的dpr等于2，1px对应4个物理像素，比如苹果手机                          |
 | em     | 相对长度单位，相对于当前父级文本字体尺寸，例如父级字体大小为 16px(`1em = 16px`)   |
 | rem    | 相对长度单位，相对于 html 字体尺寸，例如 html 字体大小为`62.5%`, `1rem = 10px`    |
 | vw、vh | 相对长度单位, vw 根据视口宽度，分成 100 份，100vw 就代表满宽, vh 则是相对视口高度 |
