--- a/src/frontend-basic/css/1.0.5px 解决方案.md
+++ b/src/frontend-basic/css/1.0.5px 解决方案.md
@@ -1,7 +1,3 @@
----
-order: 1
----
-
 # 1. 0.5px 解决方案
 
 
@@ -55,3 +51,8 @@ order: 1
 </style>
 ```
 :::
+
+### 思路
++ 借助 伪元素
++ **单边：** 绝对定位，将高度或宽度设置为 1px, 通过 `transform: scaleX(0.5)` 来处理成 0.5px
++ **四边：** 绝对定位，将宽高设置为元素的200%, 通过 `transform: scale(0.5)` 正好缩小为元素的宽高，同时设置 `border: 1px`
