--- a/src/algorithm/链表/24.两两交换链表中的节点.md
+++ b/src/algorithm/链表/24.两两交换链表中的节点.md
@@ -2,6 +2,8 @@
 
 ## 题解
 
+![16940802530111694080252275.png](https://fastly.jsdelivr.net/gh/fyhhub/imgs@main/16940802530111694080252275.png)
+
 ```js
 /**
  * @param {ListNode} head
