--- a/src/informal/每日学习.md
+++ b/src/informal/每日学习.md
@@ -25,3 +25,15 @@ var removeElements = function (head, val) {
 
 2. 算法：[707.设计链表](https://leetcode.cn/problems/design-linked-list/)
 
+
+## 2023-09-07
+
+1. 算法：翻转链表
+
+2. 算法：交换两个链表的节点
+
+3. 算法：删除链表的倒数第 N 个结点
+
+4. 算法：环形链表
+
+5. 算法：相交链表
