--- a/src/frontend-advanced/typescript/类型体操常用技巧.md
+++ b/src/frontend-advanced/typescript/类型体操常用技巧.md
@@ -40,3 +40,9 @@ type IsAny<T> = 'dong' extends ('guang' & T) ? true : false
 type IsEqual2<A, B> = (<T>() => T extends A ? 1 : 2) extends (<T>() => T extends B ? 1 : 2)
     ? true : false;
 ```
+
+### 6. 字面量类型支持string类型
+
+```ts
+type MyType = 'warn' | 'danger' | (string & {});
+```
