--- a/src/backend/Nest/4.什么是AOP,有什么优势.md
+++ b/src/backend/Nest/4.什么是AOP,有什么优势.md
@@ -2,3 +2,6 @@
 AOP （Aspect Oriented Programming）的能力，也就是面向切面编程。
 
 一个请求会经过 `Controller`、`Service`、`Repository`, 使用AOP可以在请求 `之前 和 之后`` 做一些事情, 比如通用的`日志系统`，`鉴权`、`异常处理`等
+
+
+**AOP 的好处是可以把一些通用逻辑分离到切面中，保持业务逻辑的纯粹性，这样切面逻辑可以复用，还可以动态的增删。**
