--- a/src/informal/每日学习.md
+++ b/src/informal/每日学习.md
@@ -1,51 +1,121 @@
 # 每日学习
 
-## 2023-09-06
-
-1. 算法：移除链表元素
-
+## 实现大数相加
 ```js
-var removeElements = function (head, val) {
-  let h = new ListNode(-1, head)
-  let res = h;
-  while(h.next) {
-    if (h.next.val === val) {
-      h.next = h.next.next
-      continue
-    }
-    h = h.next
+const addStrings = (num1, num2) => {
+  let res = ''
+  let i = num1.length - 1
+  let j = num2.length - 1
+  let flag = 0
+  while(i >= 0 || j >= 0) {
+    let sum = flag;
+    if (i >= 0) sum += parseInt(num1[i--])
+    if (j >= 0) sum += parseInt(num2[j--])
+
+    flag = Math.floor(sum / 10)
+
+    res = sum % 10 + res;
   }
-  return res.next;
+
+  if (flag > 0) {
+    res = flag + res;
+  }
+
+  return res;
 };
+
+console.log(addStrings("456231421242131414212", "45623142124213141421"));
 ```
-注意点：
-+ 需要创建一个虚拟头结点，方便删除头部元素
-+ while循环，判断h.next是否存在
-+ `h.next = h.next.next` 操作完成后，需要contine, 不能再继续往后移动指针了，因为可能删除后的链表，下一个元素还是目标元素
-
-2. 算法：[707.设计链表](https://leetcode.cn/problems/design-linked-list/)
 
 
-## 2023-09-07
+## 实现Promise并发控制
+```js
+async function asyncPool(limit, fns) {
+  const res = []
+  const exec = []
 
-1. 算法：翻转链表
+  for (const item of fns) {
+    const p = Promise.resolve().then(() => item())
 
-2. 算法：交换两个链表的节点
+    res.push(p)
 
-3. 算法：删除链表的倒数第 N 个结点
+    if (limit <= fns.length) {
+      const execute = p.then(() => {
+        exec.splice(exec.indexOf(execute), 1)
+      })
+      exec.push(p)
+      console.log(exec.length)
+      if (exec.length >= limit) {
+        console.log('达到并发数量', limit)
+        await Promise.race(exec)
+      }
+    }
+  }
 
-4. 算法：环形链表
+  return Promise.all(res)
+}
 
-5. 算法：相交链表
+// 示例测试用例
+async function runTest() {
+  const taskLimit = 3; // 最大并发数
+  const tasks = [
+    async () => {
+      await sleep(1000); // 模拟异步任务
+      console.log('执行完成 1');
+      return 1;
+    },
+    async () => {
+      await sleep(1000); // 模拟异步任务
+      console.log('执行完成 2');
+      return 2;
+    },
+    async () => {
+      await sleep(1000); // 模拟异步任务
+      console.log('执行完成 3');
+      return 3;
+    },
+    async () => {
+      await sleep(500); // 模拟异步任务
+      console.log('执行完成 4');
+      return 4;
+    },
+    async () => {
+      await sleep(2000); // 模拟异步任务
+      console.log('执行完成 5');
+      return 5;
+    },
+    async () => {
+      await sleep(1000); // 模拟异步任务
+      console.log('执行完成 6');
+      return 6;
+    },
+    async () => {
+      await sleep(3000); // 模拟异步任务
+      console.log('执行完成 7');
+      return 7;
+    },
+    async () => {
+      await sleep(500); // 模拟异步任务
+      console.log('执行完成 8');
+      return 8;
+    },
+  ];
 
-## 2023-09-08
-1. 环形链表 II
-2. 二叉树的层序遍历
-3. 翻转二叉树
-4. 对称二叉树
-5. 二叉树的最小深度
+  console.log(`Running asyncPool with a limit of ${taskLimit}`);
+  const results = await asyncPool(taskLimit, tasks);
+  console.log(`Results: ${results}`);
+}
+
+// 辅助函数，模拟异步任务
+function sleep(ms) {
+  return new Promise((resolve) => setTimeout(resolve, ms));
+}
+
+// 运行测试用例
+runTest().then(() => {
+  console.log('执行完毕');
+}).catch(console.error);
+```
 
 
-## 2023-09-09
-1. 平衡二叉树
-2. 完全二叉树的节点个数
+## 0.1+0.2为什么不等于0.3
