--- a/src/frontend-engineering/前端性能优化/前端监控/页面白屏监控.md
+++ b/src/frontend-engineering/前端性能优化/前端监控/页面白屏监控.md
@@ -56,6 +56,14 @@ window.addEventListener("load", () => {
 
 `firstPaintEnd`可以看做白屏时间的结束时间点。
 
+`performance API`
+
 ```js
 firstPaint = firstPaintEnd - performance.timing.navigationStart;
+```
+
+`performance.getEntriesByType`
+
+```js
+performanceData.domInteractive - performanceData.responseStart
 ```
