--- a/src/rust-learn/4.多线程.md
+++ b/src/rust-learn/4.多线程.md
@@ -76,9 +76,9 @@ fn main() {
 
 调用 `handle.join().unwrap()`， 可以等待handle对应的子线程结束后执行。
 
-## 三、创建线程的性能
+## 四、创建线程的性能
 
-**创建一个线程大概需要 0.24 毫秒，随着线程的变多，这个值会变得更大**
+**创建一个线程大概需要 0.24 毫秒，随着线程的变多，这个值会变得更大，所以线程不要创建太多**
 
 
 ## 四、线程屏障
