--- a/src/rust-learn/4.多线程.md
+++ b/src/rust-learn/4.多线程.md
@@ -81,7 +81,7 @@ fn main() {
 **创建一个线程大概需要 0.24 毫秒，随着线程的变多，这个值会变得更大，所以线程不要创建太多**
 
 
-## 四、线程屏障
+## 五、线程屏障
 
 可以使用 Barrier 让多个线程都执行到某个点后，才继续一起往后执行：
 
