--- a/src/rust-learn/6.常见Trait使用.md
+++ b/src/rust-learn/6.常见Trait使用.md
@@ -80,3 +80,61 @@ impl Add<Size> for Point {
 ## Send
 + 一个任务要实现 Send 特征，那它在 .await 调用的过程中所持有的全部数据都必须实现 Send 特征
 + 若实现了 Send 特征(可以在线程间安全地移动)，那任务自然也就可以在线程间安全地移动。
+
+## Deref 和 DerefMut
+在 Rust 中，Deref 和 DerefMut trait 允许重载解引用运算符（*）。通过实现这些 trait，可以自定义当类型被解引用时的行为。这是 Rust 提供的一种智能指针模式，使得自定义类型的行为更接近内建引用。
+
++ **Deref**
+```rust
+use std::ops::Deref;
+
+struct MyBox<T>(T);
+
+impl<T> Deref for MyBox<T> {
+    type Target = T;
+
+    fn deref(&self) -> &Self::Target {
+        &self.0
+    }
+}
+
+fn main() {
+    let x = MyBox(5);
+    assert_eq!(5, *x); // 使用了Deref trait
+}
+```
++ **DerefMut**
+
+```rust
+use std::ops::{Deref, DerefMut};
+
+impl<T> DerefMut for MyBox<T> {
+    fn deref_mut(&mut self) -> &mut Self::Target {
+        &mut self.0
+    }
+}
+
+fn main() {
+    let mut x = MyBox(5);
+    *x = 6; // 使用了DerefMut trait
+    assert_eq!(6, *x);
+}
+```
+
+Rust 会自动使用 `Deref` 和 `DerefMut` 来进行类型之间的强制转换，使得函数或方法调用更加灵活。这意味着当你调用一个需要特定引用类型的函数或方法时，如果提供了一个实现了 `Deref`（或 `DerefMut`）的类型，Rust 会自动解引用为目标类型。
+
+```rust
+fn print_str(s: &str) {
+    println!("{}", s);
+}
+
+fn main() {
+    let my_string = MyBox(String::from("Hello, Rust!"));
+    print_str(&*my_string); // 显式解引用
+    print_str(&my_string);  // 自动解引用强制转换
+}
+```
+如上，MyBox自动解引用会经过以下步骤:
++ 发现你想把一个my_string(MyBox类型)引用转为&str
++ 解引用  *my_string
++ &*my_string 获取引用
