--- a/src/rust-learn/笔记/3.常见方法使用.md
+++ b/src/rust-learn/笔记/3.常见方法使用.md
@@ -1,1 +1,26 @@
 # 常见方法使用
+
+## size_of 获取指定类型的大小
+
+```rust
+use std::mem::size_of;
+
+size_of::<Option<T>>()
+size_of::<u8>()
+// ...
+```
+
+常见类型的大小：
+```
+Type                        T    Option<T>    Result<T, io::Error>
+----------------------------------------------------------------
+u8                          1        2           24
+f64                         8       16           24
+&u8                         8        8           24
+Box<u8>                     8        8           24
+&[u8]                      16       16           24
+String                     24       24           32
+Vec<u8>                    24       24           32
+HashMap<String, String>    48       48           56
+E                          56       56           64
+```
