--- a/src/rust-learn/笔记/2.常见Trait使用.md
+++ b/src/rust-learn/笔记/2.常见Trait使用.md
@@ -138,3 +138,14 @@ fn main() {
 + 发现你想把一个my_string(MyBox类型)引用转为&str
 + 解引用  *my_string
 + &*my_string 获取引用
+
+## ToOwned
+它可以把借用的数据克隆出一个拥有所有权的数据。
+
+```rust
+let s: &str = "a";
+let ss: String = s.to_owned();
+
+let v: &[i32] = &[1, 2];
+let vv: Vec<i32> = v.to_owned();
+```
